--- a/8code_edit_across_project.ipynb
+++ b/8code_edit_across_project.ipynb
@@ -2,15 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "6628e4be",
    "metadata": {},
    "outputs": [],
    "source": [
+    "import re\n",
     "import os\n",
+    "import sys\n",
     "import json\n",
     "import random\n",
     "import subprocess\n",
+    "from tqdm import tqdm\n",
     "\n",
     "def retrieve_file(repo_path: str, file_path: str, commit_sha: str):\n",
     "    '''\n",
@@ -29,7 +32,7 @@
     "        os.chdir(repo_path)\n",
     "\n",
     "        # Check out the specific commit\n",
-    "        checkout_command = f'git checkout {commit_sha}'\n",
+    "        checkout_command = f'git checkout -q {commit_sha}'\n",
     "        subprocess.run(checkout_command, shell=True, check=True)\n",
     "\n",
     "        # Copy the file to the desired location\n",
@@ -43,41 +46,84 @@
     "    except:\n",
     "        # Always return to the original working directory\n",
     "        os.chdir(original_dir)\n",
-    "        raise KeyError('Unable to find the file.')"
+    "        raise KeyError('Unable to find the file.')\n",
+    "    \n",
+    "def extract_info(old_file_path, new_file_path):\n",
+    "    file_path = '/'.join(old_file_path.split('/')[3:])\n",
+    "    elements = old_file_path.split('/')[2].split('_')\n",
+    "    user_name = elements[0]\n",
+    "    old_sha = elements[-1]\n",
+    "    proj_name = '_'.join(elements[1:-1])\n",
+    "    new_sha = new_file_path.split('/')[2].split('_')[-1]\n",
+    "\n",
+    "    return user_name, proj_name, old_sha, new_sha, file_path\n",
+    "\n",
+    "def contains_non_english_content(content):\n",
+    "    if type(content) == list:\n",
+    "        content = ''.join(content)\n",
+    "    pattern = re.compile(r'[^\\x00-\\x7F]+')\n",
+    "    match = pattern.search(content)\n",
+    "    \n",
+    "    if match:\n",
+    "        return True\n",
+    "    else:\n",
+    "        return False\n",
+    "    \n",
+    "def apply_filter(data_sample):\n",
+    "    # 1. if code window is empty, return False\n",
+    "    if len(data_sample['code_window']) == 0:\n",
+    "        return False\n",
+    "    # 2. if hunk type is 'add', but add_line is empty, return False\n",
+    "    if data_sample['hunk_type'] == 'add' and len(data_sample['add_line']) == 0:\n",
+    "        return False\n",
+    "    # 3. if code_window, add_line, commit message contains more than english words, return False\n",
+    "    if contains_non_english_content(data_sample['commit_msg']) or \\\n",
+    "        contains_non_english_content(data_sample['add_line']) or \\\n",
+    "        contains_non_english_content(data_sample['code_window']):\n",
+    "        return False\n",
+    "\n",
+    "    return True"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "13527d4c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dataset size: 7282\n",
+      "Dataset example:\n",
+      " {'user_name': 'Snailclimb', 'proj_name': 'JavaGuide', 'old_sha': 'b1576701bbbbfefa247e5d361e5b10f02e360e2a', 'new_sha': '789406cc28c9974334f2f07b0e85f0eb559d93d5', 'file_path': '分布式.md', 'changes': [{'func_name': '', 'del_line_idx': [], 'add_line_idx': [1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13], 'del_line': '', 'add_line': '  - ### 分布式系统的经典基础理论\\n  \\n    [分布式系统的经典基础理论](https://blog.csdn.net/qq_34337272)\\n  - ### 分布式事务\\n    [聊聊分布式事务，再说说解决方案](http://www.cnblogs.com/savorboard/p/distributed-system-transaction-consistency.html)\\n  - ### 分布式系统一致性\\n    [分布式服务化系统一致性的“最佳实干”](https://www.jianshu.com/p/1156151e20c8)\\n\\n   - ### 一致性协议/算法\\n     早在1898年就诞生了著名的 **Paxos经典算法** （**Zookeeper就采用了Paxos算法的近亲兄弟Zab算法**），但由于Paxos算法非常难以理解、实现、排错。所以不断有人尝试简化这一算法，直到2013年才有了重大突破：斯坦福的Diego Ongaro、John Ousterhout以易懂性为目标设计了新的一致性算法—— **Raft算法** ，并发布了对应的论文《In Search of an Understandable Consensus Algorithm》，到现在有十多种语言实现的Raft算法框架，较为出名的有以Go语言实现的Etcd，它的功能类似于Zookeeper，但采用了更为主流的Rest接口。\\n     * [图解 Paxos 一致性协议](http://blog.xiaohansong.com/2016/09/30/Paxos/)\\n     *  [图解分布式协议-RAFT](http://ifeve.com/raft/)\\n     *  [Zookeeper ZAB 协议分析](http://blog.xiaohansong.com/2016/08/25/zab/)'}], 'commit_msg': '增加分布式内容', 'pull_msg': '', 'html_url': 'https://github.com/Snailclimb/JavaGuide/commit/789406cc28c9974334f2f07b0e85f0eb559d93d5'}\n"
+     ]
+    }
+   ],
    "source": [
     "# 1. Load raw dataset int jsonl format\n",
     "dataset = []\n",
-    "with open('javascript_dataset.jsonl', 'r', encoding='utf-8') as file:\n",
+    "with open('./dataset/java_dataset.jsonl', 'r', encoding='utf-8') as file:\n",
     "    for i in file.readlines():\n",
     "        data = json.loads(i)\n",
     "        dataset.append(data)\n",
     "print('Dataset size:',len(dataset))\n",
-    "print('Dataset example:',dataset[0])"
+    "print('Dataset example:\\n',dataset[0])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "id": "c346bd74",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "19951"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The number of commits: 3709\n"
+     ]
     }
    ],
    "source": [
@@ -104,33 +150,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "22ffdeec",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "FileNotFoundError",
-     "evalue": "[Errno 2] No such file or directory: '.././repos/alekseykulikov_storage_0065c63f6ffa6af38fcdcebf4f3a1af21ce7af4e/component.json'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[0;32m/var/folders/h6/2scw0c215yn2f_z5rclvgvrc0000gn/T/ipykernel_10837/3369635426.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      7\u001b[0m         \u001b[0;31m# add\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mj\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'del_line_idx'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;32mand\u001b[0m \u001b[0mj\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'add_line_idx'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 9\u001b[0;31m             \u001b[0;32mwith\u001b[0m \u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'../'\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'new_file_path'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mencoding\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'utf-8'\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mfile\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     10\u001b[0m                 \u001b[0mlines\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mfile\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mreadlines\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     11\u001b[0m                 \u001b[0mlabel\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m'keep'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlines\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: '.././repos/alekseykulikov_storage_0065c63f6ffa6af38fcdcebf4f3a1af21ce7af4e/component.json'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# 3. convert each edit hunk into a data sample\n",
     "add = []\n",
     "replace = []\n",
     "remove = []\n",
     "prev_line = [3,4,5]\n",
-    "repos_dir = '/media/chenyan/Backup Plus/CodeEdit_raw_dataset/repos'\n",
+    "repos_dir = './repos'\n",
     "processed_data_dir = ''\n",
     "\n",
-    "for idx, i in enumerate(dataset):\n",
+    "for idx, i in enumerate(tqdm(dataset)):\n",
     "    cnt = 0\n",
+    "    if 'old_file_path' in i.keys():\n",
+    "        user_name, proj_name, old_sha, new_sha, file_path = extract_info(i['old_file_path'], i['new_file_path'])\n",
+    "        i['user_name'] = user_name\n",
+    "        i['proj_name'] = proj_name\n",
+    "        i['old_sha'] = old_sha\n",
+    "        i['new_sha'] = new_sha\n",
+    "        i['file_path'] = file_path\n",
     "    for j in i['changes']:\n",
     "        # add\n",
     "        if j['del_line_idx'] == [] and j['add_line_idx']:\n",
@@ -140,7 +181,12 @@
     "            file_path = i['file_path']\n",
     "            repo_path = os.path.join(repos_dir, proj_name)\n",
     "            # Get the content of this file of the given commit\n",
-    "            lines = retrieve_file(repo_path, file_path, commit_sha)\n",
+    "            try:\n",
+    "                lines = retrieve_file(repo_path, file_path, commit_sha)\n",
+    "            except KeyError:\n",
+    "                break\n",
+    "            except:\n",
+    "                raise KeyError('Unexpected error:', sys.exc_info()[0])\n",
     "\n",
     "            label = ['keep']*len(lines)\n",
     "            \n",
@@ -157,7 +203,7 @@
     "            code_window = lines[start_line:add_line] + lines[mid_line:end_line]\n",
     "            label_window = label[start_line:add_line] + ['add'] + label[mid_line:end_line]\n",
     "            \n",
-    "            add.append({\n",
+    "            data_sample = {\n",
     "                        'code_window': code_window, \n",
     "                        'label_window': label_window, \n",
     "                        'commit_msg': i['commit_msg'], \n",
@@ -167,7 +213,9 @@
     "                        'old_file_path': file_path, \n",
     "                        'idx': idx,\n",
     "                        'hunk_type': 'add'\n",
-    "                    })\n",
+    "                    }\n",
+    "            if apply_filter(data_sample):\n",
+    "                add.append(data_sample)\n",
     "                \n",
     "        # replace\n",
     "        elif j['del_line_idx'] and j['add_line_idx']:\n",
@@ -176,7 +224,13 @@
     "            commit_sha = i['old_sha']\n",
     "            file_path = i['file_path']\n",
     "            repo_path = os.path.join(repos_dir, proj_name)\n",
-    "            lines = retrieve_file(repo_path, file_path, commit_sha)\n",
+    "            try:\n",
+    "                lines = retrieve_file(repo_path, file_path, commit_sha)\n",
+    "            except KeyError:\n",
+    "                break\n",
+    "            except:\n",
+    "                raise KeyError('Unexpected error:', sys.exc_info()[0])\n",
+    "\n",
     "\n",
     "            label = ['keep']*len(lines)\n",
     "            for del_line in j['del_line_idx']:\n",
@@ -191,7 +245,7 @@
     "            code_window = lines[start_line:end_line]\n",
     "            label_window = label[start_line:end_line]\n",
     "            \n",
-    "            replace.append({\n",
+    "            data_sample = {\n",
     "                        'code_window': code_window, \n",
     "                        'label_window': label_window, \n",
     "                        'commit_msg': i['commit_msg'], \n",
@@ -201,7 +255,9 @@
     "                        'old_file_path': file_path, \n",
     "                        'idx': idx,\n",
     "                        'hunk_type': 'replace'\n",
-    "                    })\n",
+    "                    }\n",
+    "            if apply_filter(data_sample):\n",
+    "                replace.append(data_sample)\n",
     "        \n",
     "        # remove\n",
     "        elif j['del_line_idx'] and j['add_line_idx'] == []:\n",
@@ -210,7 +266,12 @@
     "            commit_sha = i['old_sha']\n",
     "            file_path = i['file_path']\n",
     "            repo_path = os.path.join(repos_dir, proj_name)\n",
-    "            lines = retrieve_file(repo_path, file_path, commit_sha)\n",
+    "            try:\n",
+    "                lines = retrieve_file(repo_path, file_path, commit_sha)\n",
+    "            except KeyError:\n",
+    "                break\n",
+    "            except:\n",
+    "                raise KeyError('Unexpected error:', sys.exc_info()[0])\n",
     "            \n",
     "            label = ['keep']*len(lines)\n",
     "            for del_line in j['del_line_idx']:\n",
@@ -225,7 +286,7 @@
     "            code_window = lines[start_line:end_line]\n",
     "            label_window = label[start_line:end_line]\n",
     "            \n",
-    "            remove.append({\n",
+    "            data_sample = {\n",
     "                        'code_window': code_window, \n",
     "                        'label_window': label_window, \n",
     "                        'commit_msg': i['commit_msg'], \n",
@@ -235,7 +296,9 @@
     "                        'old_file_path': file_path, \n",
     "                        'idx': idx,\n",
     "                        'hunk_type': 'remove'\n",
-    "                    })\n",
+    "                    }\n",
+    "            if apply_filter(data_sample):\n",
+    "                remove.append(data_sample)\n",
     "            \n",
     "print('The number of add type hunks:', len(add))\n",
     "print('The number of replace type hunks:', len(replace))\n",
@@ -244,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 8,
    "id": "4a7a3007",
    "metadata": {},
    "outputs": [],
@@ -257,7 +320,11 @@
     "    if html_url in result_dict:\n",
     "        result_dict[html_url].append(i)\n",
     "    else:\n",
-    "        result_dict[html_url] = [i]"
+    "        result_dict[html_url] = [i]\n",
+    "\n",
+    "# save the dict into json file\n",
+    "with open('./dataset/processed_dataset.json', 'w', encoding='utf-8') as file:\n",
+    "    json.dump(result_dict, file, indent=4, ensure_ascii=False)"
    ]
   },
   {
@@ -480,7 +547,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
